# coffee-project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  id_list.json  pyproject.toml  requirements.txt  users.json  valid_codes.json  valid_ids.txt
app/: app.py
backup/: id_list.json
deploy/: .env.example  docker-compose.yml
deploy/init_db/: full_backup.sql
static/css/: style.css
static/js/: main.js
templates/: failure.html  index.html  success.html
test/: app.py  id_list.txt  text.txt
test/static/css/: style.css
test/static/js/: main.js
test/templates/: index.html
test2/: index.html  main.js
