[project]
name = "coffee-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.8.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "flask==3.0.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.5",
    "markupsafe==2.1.5",
    "mysql-connector-python==9.1.0",
    "python-dotenv==1.0.1",
    "werkzeug==3.0.6",
]
